--- a/Ham/bai3.html
+++ b/Ham/bai3.html
@@ -21,6 +21,8 @@
         let arr1 = [3,4,5,6,7,8,9];
         let min = minArray(arr1);
         alert(min);
+
+        function add()
     </script>
 </body>
 </html>
